--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,11 @@ include:
   - project: "f5/nginx/tools/devops-utils"
     file: "/include/gitlab-sast.yml"
     ref: "master"
+  - template: Jobs/Container-Scanning.gitlab-ci.yml
 
 stages:
   - lint+test+build
+  - security scanning
   - release
 
 variables:
@@ -176,6 +178,34 @@ checkmarx-scan:
     CX_FLOW_ZIP_EXCLUDE: ""
   needs: []
   allow_failure: true
+
+# https://docs.gitlab.com/ee/user/application_security/container_scanning/
+container_scanning:
+  stage: security scanning
+  extends:
+    - .devops-docker-cicd
+  variables:
+    CS_DISABLE_LANGUAGE_VULNERABILITY_SCAN: "false"
+    GIT_STRATEGY: "fetch"
+    # CI_COMMIT_SHORT_SHA tag is being used to uniquely scan images being produced (or reproduced) on a feature branch.
+    CS_IMAGE: "${DEVOPS_DOCKER_URL_DEFAULT}/nginx-azure-lb/${CI_PROJECT_NAME}/nginxaas-loadbalancer-kubernetes:${CI_COMMIT_SHORT_SHA}"
+    # Gitlab container scanner needs the tenant ID to be set as it is using Azure auth libs underneath.
+    AZURE_TENANT_ID: ${ARM_TENANT_ID}
+  before_script:
+    # The Gitlab container scan image runs as a non-root user, which leads to the DevOps abstraction failing to bootstrap
+    # as the CI directories on the runner as seeded as "root".
+    - git config --global --add safe.directory "${CI_PROJECT_DIR}"
+    # Prerequisite toolchain to run the DevOps abstraction.
+    - sudo apt-get update && sudo apt-get install -y curl jq
+    - *import-devops-core-services
+    - devops.backend.docker.authenticate
+    - export CS_REGISTRY_USER="${DEVOPS_DOCKER_USER}" CS_REGISTRY_PASSWORD="${DEVOPS_DOCKER_PASS}"
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v[\d]+\.[\d]+\.[\d]+/'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - when: on_success
 
 .release-common:
   stage: release
